--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<form method="post" action="#">
+									<a href= "mailto:tina@virtualdatavis.com"> Send Email </a>
+									<!--<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<input type="text" name="name" id="name" placeholder="Name" />
@@ -135,7 +136,7 @@
 											<li><input type="submit" value="Send" class="primary" /></li>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
-									</form>
+									</form>-->
 								</section>
 							</div>
 						</div>
