Made correction on default email

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<a href= "mailto:tina@virtualdatavis.com"> Send Email </a>
+									<a href= "mailto:abc@exampleemail.com"> Send Email </a>
 									<!--<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
