Email and social media update

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div>
 								<section>
 									<h2>About</h2>
-									<p>This portfolio is a showcase of projects.</p>
+									<p>This portfolio is a showcase of projects at VirtualDataVis.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -108,8 +108,9 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-										
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
@@ -119,7 +120,9 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<a href= "mailto:abc@exampleemail.com"> Send Email </a>
+									<p>For more information,  
+									<a href= "mailto:socialmedia@virtualdatavis.com"> Email socialmedia@virtualdatavis.com</a>
+									</p>
 									<!--<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
