Email and links update

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div>
 								<section>
 									<h2>About</h2>
-									<p>This portfolio is a showcase of projects at VirtualDataVis.</p>
+									<p>This portfolio is a showcase of projects at VirtualDataVis, specializing in data visualization design in virtual and augmented reality.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -108,9 +108,9 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" "https://www.linkedin.com/in/tinalowry?original_referer=" class="icon brands fa-linkedin-in" ><span class="label">LinkedIn</span></a></li>
+										<li><a href="#"  "https://www.instagram.com/virtualdatavis/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" "https://twitter.com/virtualdatavis" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
@@ -120,8 +120,8 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<p>For more information,  
-									<a href= "mailto:socialmedia@virtualdatavis.com"> Email socialmedia@virtualdatavis.com</a>
+									<p>For more information, email   
+									<a href= "mailto:socialmedia@virtualdatavis.com">socialmedia@virtualdatavis.com</a>
 									</p>
 									<!--<form method="post" action="#">
 										<div class="fields">
