Updated social media links

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<div>
 								<section>
 									<h2>About</h2>
-									<p>This portfolio is a showcase of projects at VirtualDataVis, specializing in data visualization design in virtual and augmented reality.</p>
+									<p>VirtualDataVis specializes in data visualization designs primarily in virtual and augmented reality.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -107,10 +107,10 @@
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-										<li><a href="#" "https://www.linkedin.com/in/tinalowry?original_referer=" class="icon brands fa-linkedin-in" ><span class="label">LinkedIn</span></a></li>
-										<li><a href="#"  "https://www.instagram.com/virtualdatavis/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" "https://twitter.com/virtualdatavis" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+										<li><a href="https://www.linkedin.com/in/tinalowry?original_referer="  class="icon brands fa-linkedin-in" ><span class="label">LinkedIn</span></a></li>-->
+										<li><a href="https://www.instagram.com/virtualdatavis/"   class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/virtualdatavis/"   class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
