--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>VirtualDataVis</strong></a></h1>
+						<h1><a href="https://virtualdatavis.com"><strong>VirtualDataVis</strong></a></h1>
+						<!--<h1><a href="index.html"><strong>VirtualDataVis</strong></a></h1>-->
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
@@ -101,7 +102,7 @@
 									<p>VirtualDataVis specializes in data visualization designs primarily in virtual and augmented reality.</p>
 								</section>
 								<section>
-									<h2>Follow me on ...</h2>
+									<h2>Follow us on ...</h2>
 									<ul class="icons">
 										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -110,11 +111,11 @@
 										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 										<li><a href="https://www.linkedin.com/in/tinalowry?original_referer="  class="icon brands fa-linkedin-in" ><span class="label">LinkedIn</span></a></li>-->
 										<li><a href="https://www.instagram.com/virtualdatavis/"   class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.instagram.com/virtualdatavis/"   class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://twitter.com/virtualdatavis"   class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; VirtualDataVis. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; <a href = "https://virtualdatavis.com">VirtualDataVis. Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
 							<div>
