--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							<div>
 								<section>
 									<h2>About</h2>
-									<p>VirtualDataVis specializes in data visualization designs primarily in virtual and augmented reality.</p>
+									<p>VirtualDataVis specializes in data visualization designs in virtual and augmented reality.</p>
 								</section>
 								<section>
 									<h2>Follow us on ...</h2>
@@ -115,7 +115,7 @@
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; <a href = "https://virtualdatavis.com">VirtualDataVis. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; <a href = "https://virtualdatavis.com">VirtualDataVis </a> Design: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
 							<div>
