--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 								<section>
 									<h2>Get in touch</h2>
 									<p>For more information, email   
-									<a href= "mailto:socialmedia@virtualdatavis.com">socialmedia@virtualdatavis.com</a>
+									<a href= "mailto:socialmedia@virtualdatavis.com">contact@virtualdatavis.com</a>
 									</p>
 									<!--<form method="post" action="#">
 										<div class="fields">
